Fix link alignment

--- a/src/components/common/header/Header.module.css
+++ b/src/components/common/header/Header.module.css
@@ -39,6 +39,8 @@
   color: var(--primary);
   padding: 0 0.5rem;
   transition: color 0.1s;
+  display: flex;
+  align-items: center;
 }
 
 .navigation > *:hover {
